--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ListadoSolicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ListadoSolicitudes.cshtml
@@ -1,10 +1,10 @@
 ﻿@model IEnumerable<Portal_2_0.Models.PFA>
 
-@{  
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
     //ViewBag.Title = "Premium Freight Approval";
     ViewBag.PrimerNivel = "PFA";
-   // ViewBag.SegundoNivel = "PFA_registro";
+    // ViewBag.SegundoNivel = "PFA_registro";
     ViewBag.ControllerName = "PremiumFreightApproval";
 
     Clases.Util.MensajesSweetAlert mensajeAlerta = (Clases.Util.MensajesSweetAlert)ViewBag.MensajeAlert;
@@ -57,12 +57,12 @@
                                     <div class="form-group">
                                         @if (ViewBag.Create != null && ViewBag.Create)
                                         {
-                                        <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
-                                            <i class="fa fa-plus-square"></i>
-                                            Crear nuevo
-                                        </a>
+                                            <a href="@Url.Action( "Create", ViewBag.ControllerName)" class="btn btn-success">
+                                                <i class="fa fa-plus-square"></i>
+                                                Crear nuevo
+                                            </a>
                                         }
-                                        
+
                                     </div>
                                     <table id="datatable_1" class="table table-striped table-bordered nowrap" cellspacing="0" width="100%">
                                         <thead>
@@ -102,6 +102,9 @@
                                                     @Html.DisplayNameFor(model => model.promise_recovering_date)
                                                 </th>
                                                 <th>
+                                                    @Html.DisplayNameFor(model => model.is_recovered)
+                                                </th>
+                                                <th>
                                                     @Html.DisplayNameFor(model => model.credit_debit_note_number)
                                                 </th>
 
@@ -110,76 +113,91 @@
                                         <tbody>
                                             @foreach (var item in Model)
                                             {
-                                            <tr>
-                                                <td>
-                                                    @if (ViewBag.Edit != null && ViewBag.Edit)
-                                                    {
-                                                        <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
-                                                            <i class="fa fa-pencil-square-o"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.Details != null && ViewBag.Details)
-                                                    {
-                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
-                                                            <i class="fa fa-info-circle"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.SendToAuthorizer != null && ViewBag.SendToAuthorizer)
-                                                    {
-                                                        <a href="@Url.Action("Send", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info btm-sm" title="Enviar">
-                                                            <i class="fa fa-send"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.AuthorizarRechazar != null && ViewBag.AuthorizarRechazar)
-                                                    {
-                                                        <a href="@Url.Action("AutorizarRechazar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Authorize">
-                                                            <i class="fa fa-check-square-o"></i>
-                                                        </a>
-                                                    }
-                                                    @if (ViewBag.EditCredit != null && ViewBag.EditCredit)
-                                                    {
-                                                        <a href="@Url.Action("EditCreditNote", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Edit Credit Note">
-                                                            <i class="fa fa-credit-card"></i>
-                                                        </a>
-                                                    }
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.id)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.date_request)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.PFA_Reason.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.PFA_Type_shipment.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
-                                                </td>
-                                                <td>
-                                                    @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
-                                                </td>
-                                                <td>
-                                                    @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
-                                                </td>
-                                                <td>
-                                                    @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.promise_recovering_date)
-                                                </td>
-                                                <td>
-                                                    @Html.DisplayFor(modelItem => item.credit_debit_note_number)
-                                                </td>
-                                            </tr>
+                                                <tr>
+                                                    <td>
+                                                        @if (ViewBag.Edit != null && ViewBag.Edit)
+                                                        {
+                                                            <a href="@Url.Action("Edit", ViewBag.ControllerName, new { id = item.id})" class="btn btn-success btm-sm" title="Editar">
+                                                                <i class="fa fa-pencil-square-o"></i>
+                                                            </a>
+                                                        }
+                                                        @if (ViewBag.Details != null && ViewBag.Details)
+                                                        {
+                                                            <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
+                                                                <i class="fa fa-info-circle"></i>
+                                                            </a>
+                                                        }
+                                                        @if (ViewBag.SendToAuthorizer != null && ViewBag.SendToAuthorizer)
+                                                        {
+                                                            <a href="@Url.Action("Send", ViewBag.ControllerName, new { id = item.id })" class="btn btn-info btm-sm" title="Enviar">
+                                                                <i class="fa fa-send"></i>
+                                                            </a>
+                                                        }
+                                                        @if (ViewBag.AuthorizarRechazar != null && ViewBag.AuthorizarRechazar)
+                                                        {
+                                                            <a href="@Url.Action("AutorizarRechazar", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Authorize">
+                                                                <i class="fa fa-check-square-o"></i>
+                                                            </a>
+                                                        }
+                                                        @if (ViewBag.EditCredit != null && ViewBag.EditCredit)
+                                                        {
+                                                            <a href="@Url.Action("EditCreditNote", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Edit Credit Note">
+                                                                <i class="fa fa-credit-card"></i>
+                                                            </a>
+                                                        }
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.id)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.date_request)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Reason.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Type_shipment.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
+                                                    </td>
+                                                    <td>
+                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
+                                                    </td>
+                                                    <td>
+                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.promise_recovering_date)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.is_recovered.HasValue)
+                                                        {
+                                                            if (item.is_recovered.Value)
+                                                            {
+                                                                <span>RECOVERED</span>
+                                                            }
+                                                            else
+                                                            {
+                                                               <span>NOT RECOVERED</span>
+                                                            }
+
+                                                        }
+                                                        
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.credit_debit_note_number)
+                                                    </td>
+                                                </tr>
                                             }
 
                                         </tbody>
@@ -216,12 +234,12 @@
 
         });
 
-        ////agranda el tamaño de la barra
-        //window.onload = function () {
-        //    document.getElementById('menu_toggle').click();
-        //}
+            ////agranda el tamaño de la barra
+            //window.onload = function () {
+            //    document.getElementById('menu_toggle').click();
+            //}
 
-        
+
     </script>
 
 }
