--- a/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ReportesPFA.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/PremiumFreightApproval/ReportesPFA.cshtml
@@ -193,65 +193,83 @@
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.credit_debit_note_number)
                                                     </th>
+                                                    <th>
+                                                        @Html.DisplayNameFor(model => model.is_recovered)
+                                                    </th>
 
                                                 </tr>
                                             </thead>
                                             <tbody>
                                                 @foreach (var item in Model)
                                                 {
-                                                    <tr>
-                                                        <td>
-                                                            <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
-                                                                <i class="fa fa-info-circle"></i>
+                                                <tr>
+                                                    <td>
+                                                        <a href="@Url.Action("Details", ViewBag.ControllerName, new { id = item.id })" class="btn btn-secondary btm-sm" title="Detalles">
+                                                            <i class="fa fa-info-circle"></i>
+                                                        </a>
+                                                        @if (User.IsInRole(TipoRoles.PFA_AUTORIZACION) && item.estatus == Bitacoras.Util.PFA_Status.APROBADO)
+                                                        {
+                                                            <a href="@Url.Action("EditCreditNote", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Edit Credit Note">
+                                                                <i class="fa fa-credit-card"></i>
                                                             </a>
-                                                            @if (User.IsInRole(TipoRoles.PFA_AUTORIZACION) && item.estatus == Bitacoras.Util.PFA_Status.APROBADO)
+                                                        }
+                                                    </td>
+
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.id)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.estatus)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.date_request)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Reason.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Type_shipment.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
+                                                    </td>
+                                                    <td>
+                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
+                                                    </td>
+                                                    <td>
+                                                        @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.promise_recovering_date)
+                                                    </td>
+                                                    <td>
+                                                        @Html.DisplayFor(modelItem => item.credit_debit_note_number)
+                                                    </td>
+                                                    <td>
+                                                        @if (item.is_recovered.HasValue)
+                                                        {
+                                                            if (item.is_recovered.Value)
                                                             {
-                                                                <a href="@Url.Action("EditCreditNote", ViewBag.ControllerName, new { id = item.id })" class="btn btn-success btm-sm" title="Edit Credit Note">
-                                                                    <i class="fa fa-credit-card"></i>
-                                                                </a>
+                                                                <span>RECOVERED</span>
                                                             }
-                                                            </td>
-                                                        
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.id)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.estatus)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.date_request)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.empleados1.ConcatNombre)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.PFA_Reason.descripcion)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.PFA_Type_shipment.descripcion)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.PFA_Responsible_cost.descripcion)
-                                                            </td>
-                                                            <td>
-                                                                @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_pf_cost)
-                                                            </td>
-                                                            <td>
-                                                                @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.total_cost)
-                                                            </td>
-                                                            <td>
-                                                                @string.Format(System.Globalization.CultureInfo.GetCultureInfo("es-US"), "{0:N2}", item.TotalCostToRecover)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.PFA_Recovered_cost.descripcion)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.promise_recovering_date)
-                                                            </td>
-                                                            <td>
-                                                                @Html.DisplayFor(modelItem => item.credit_debit_note_number)
-                                                            </td>
-                                                        </tr>
+                                                            else
+                                                            {
+                                                                <span>NOT RECOVERED</span>
+                                                            }
+
+                                                        }
+
+                                                    </td>
+                                                </tr>
                                                     }
 
                                             </tbody>
